# CourseWork_TgBot_DetectQR-Codes

./: .gitignore  CMakeLists.txt  README.md  source.cpp
src/: CMakeLists.txt  QRcapture.cpp  QRcapture.h  QrToPng.cpp  QrToPng.h  source.cpp
